--- a/addShapes.css
+++ b/addShapes.css
@@ -17,7 +17,7 @@ body{
     width: 100%;
     gap: 10px;
     padding: 10px;
-    max-width: 1050px;
+    /* max-width: 1050px; */
     
 }
 section{
@@ -28,6 +28,7 @@ section{
 .tools-board{
   width: 210px;
   padding: 15px 22px 0;
+  height: 100vh;
 
 }
 .tools-board .row{
@@ -150,6 +151,15 @@ section{
 
 }
 
+.buttons .change-background{
+
+  background: #4af76a;
+  border:1px solid #4af76a;
+
+}
+
+
+
 .drawing-board{
   flex: 1;
 
@@ -158,5 +168,4 @@ section{
   width:100% ;
   height: 100%;
 }
-
 
